--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,12 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+
+  .scan-region-highlight .scan-region-highlight-svg,
+  .scan-region-highlight .code-outline-highlight {
+    stroke: #ffffff !important;
+    stroke-width: 8px !important;
+  }
 }
 
 @layer base {
